--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -125,9 +125,9 @@ enableRobotsTXT = true
     ## Author information
     [params.author]
         ## site author's name
-        name = 'Alicia Mand'
+        name = 'Author Name'
         ## Author's email (will be used for RSS feed)
-        email = 'aemand@wisc.edu'
+        email = 'email@example.com'
         ## Co-authors information (optional)
         coauthor = [
             {name = "A.N. Other", bio = "This quick paragraph is written in site configuration (hugo.toml). Therefore, no markdown support. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."}
